--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
     @apply  flex justify-center w-full h-full md:px-0;
   }
   .imgDivSection3{
-    @apply grid grid-cols-1 md:grid-cols-3 place-items-center h-auto md:h-1/2 mt-10 gap-10 md:px-20;
+    @apply grid grid-cols-1 md:grid-cols-3 place-items-center h-auto md:h-1/2 mt-10 gap-10 px-10 md:px-16;
   }
   .textDivSection3{
    @apply text-[#FFB84C] text-2xl md:text-4xl font-bold;
